# phrase-detective

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  testpypi.yml
apidocs/source/: conf.py  index.rst  modules.rst  phrase_detective.regx.rst  phrase_recognizer.rules.rst
docs/: genindex.html  index.html  modules.html  objects.inv  phrase_detective.components.html  phrase_detective.html  phrase_detective.regx.html  phrase_detective.rules.html  phrase_recognizer.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt  phrase_detective.components.rst.txt  phrase_detective.rst.txt  phrase_detective.rules.rst.txt
docs/source/: phrase_recognizer.rst
phrase_detective/: __init__.py  lib.py  noun_phrases.py  verb_knowledge.py
phrase_detective/components/: __init__.py  noun_phrases.py  prep_phrases.py  verb_knowledge.py
phrase_detective/de/: noun_phrases.py
phrase_detective/en/: noun_phrases.py
phrase_detective/es/: noun_phrases.py
phrase_detective/regx/: __init__.py  de.py  en.py  es.py
phrase_detective/rules/: __init__.py  de.py  en.py
phrase_recognizer/: __init__.py  constants.py  entry.py  lib.py  train.py
phrase_recognizer/components/: __init__.py  noun_phrases.py  prep_phrases.py  verb_knowledge.py
phrase_recognizer/regx/: __init__.py  en.py
phrase_recognizer/rules/: __init__.py  es.py
tests/: lib.py  test_components.py  test_de.py  test_en.py  test_es.py  test_lib.py  test_phrase_detective.py  test_phrase_recognizer.py  test_sen.py  test_symbols.py  test_tbr.py
