[tool.poetry]
name = "phrase-recognizer"
version = "0.1.7"
description = "Phrase recognizer for spacy pipeline"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
spacy = "^3.0.5"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
