[tool.poetry]
name = "phrase-detective"
version = "0.1.9"
description = "Phrase recognizer component for spacy pipeline"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]
documentation = "https://qishe-nlp.github.io/phrase-detective/"
repository = "https://github.com/qishe-nlp/phrase-detective"
keywords = ["phrase detection", "NLP", "spacy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
spacy = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^3.5.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
