[tool.poetry]
name = "phrase-detective"
version = "0.1.35"
description = "Phrase recognizer component for spacy pipeline"
authors = ["Phoenix Grey <phoenix.grey0108@gmail.com>"]
documentation = "https://qishe-nlp.github.io/phrase-detective/"
repository = "https://github.com/qishe-nlp/phrase-detective"
keywords = ["phrase detection", "NLP", "spacy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spacy = "3.7.5"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
Sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-jquery = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
